# nba_hub

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  list_months.py  main.py  nba.duckdb  package-lock.json  package.json  prefect.yaml  pyproject.toml  requirements.txt  ruff.toml  run_all.py  run_check.sh  run_init.py  run_rust_check.sh  verify_conn.toml
.claude/: settings.local.json
.plans/: IMPLEMENTATION_SPEC.md  IMPLEMENTATION_STATUS.md  PRD.md
convex/: awards.ts  drafts.ts  ingest.ts  leaders.ts  players.ts  schema.ts  seasons.ts  teams.ts  transactions.ts  tsconfig.json
crates/nba_etl/: Cargo.toml
crates/nba_etl/src/: backfill.rs  convex.rs  csv_utils.rs  main.rs  seed.rs  validation.rs
crates/nba_frontend/: Cargo.toml
crates/nba_frontend/src/: components.rs  convex.rs  data.rs  lib.rs  main.rs  models.rs  styles.rs  utils.rs
crates/nba_frontend/src/pages/: awards.rs  draft.rs  glossary.rs  home.rs  leaders.rs  mod.rs  player_profile.rs  players.rs  season_detail.rs  seasons.rs  team_profile.rs  teams.rs  transactions.rs
crates/nba_scraper/: Cargo.toml
crates/nba_scraper/src/: client.rs  lib.rs
crates/nba_scraper/src/sites/: awards.rs  basketball_reference.rs  mod.rs  personnel.rs
data/: month_urls.txt  nba.duckdb
docs/: architecture.md  configuration.md  getting_started.md  troubleshooting.md
flows/: __init__.py  daily_update.py  historical_backfill.py  monthly_validation.py  weekly_advanced_metrics.py
nba_database_documentation/: 01_structural_inventory.md  02_statistical_profile.md  03_semantic_analysis.md  04_data_quality_report.md  05_er_diagram.md  06_nba_glossary.md  07_validation_and_gap_analysis_plan.md  08_database_validation_report.md  09_validation_findings_and_recommendations.md  10_player_box_scores_gap_analysis.md  DATA_ACQUISITION_STATUS.md  PHASE_1_2_EXECUTION_GUIDE.md  PHASE_1_2_EXECUTION_SUMMARY.md  PHASE_1_3_ADVANCED_METRICS.md  PHASE_1_3_ARCHITECTURE.md  PHASE_1_3_IMPLEMENTATION_SUMMARY.md  README.md  (+1 more)
(+162 files in other folders)
