[package]
name = "nba_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.0", features = ["bundled"] }
nba_core = { path = "../nba_core" }
nba_scraper = { path = "../nba_scraper" }
