[package]
name = "nba_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
log = "0.4"
chrono = "0.4"
robotstxt = "0.3"
regex = "1.10"
nba_core = { path = "../nba_core" }
